  - Optional mode for threaded spam removal.
  - Replaced libcrm114 spam classificator with terminator library.
  - Display Message ID and date in spam training mode.
  - Increase message preview size in spam training mode.
  - Spam score is now displayed in first column in removed messages listing.
  - Spam score is now colorized, according to spam/ham/unsure classification.
- Handle missing 'Date:' field in connectivity utility.
- Improvements to text mode browser:
  - Very long (more than 1024 characters) message lines are now properly
    handled.
  - Add decorations to *bold*, _underlined_ and /italics/ text segments.
  - Add decorations to URLs.
- Bump package version to 3.
  - Required by changes to the hashing algorithm.
  - Required to save Message ID compression codebook.
  - Old archives are now refused to be opened by libuat. Package utility still
    can handle them.
- Improvements in verify utility:
  - Check if all messages can be accessed using their Message IDs.
  - Display info if lexicon distance data is missing.
- Check for empty 'Subject:' field in extract-msgmeta utility.
- Extraction of parent message from 'References:' field is now more relaxed.
- Improvements to time stamp handling:
  - While 'Received:' field exists primarily in mailing list messages, usenet
    messages use 'NNTP-Received-Date:' or 'Injection-Data:' headers. These are
    now also handled.
  - Validate date against all server date headers, not only the first one.
- Multi-threaded compression in repack-lz4 utility.
- Improved memory efficiency of small temporary allocations in various
  utilities.
- Improvements in threadify utility:
  - Multi-threaded message matching.
  - Lexicon data is now properly transformed after the messages are matched.
    Lexicon utility no longer needs to be run twice.
- Change search in headers to search in 'From:' or 'Subject:' fields.


v0.4 (2017-07-19)
-----------------

- Qt browser is now marked as deprecated.